# Calling-Agent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README-Quickstart.md  README.md  agent_twilio.py  config.yaml  docker-compose.yml  environment.yml  experiment.ipynb  pyproject.toml  run_calling_agent.py  talk.py  twilio_restAPI.py
experiment/: experiment.ipynb
