[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calling-agent"
version = "0.1.0"
description = "Twilio Voice with FastAPI, ElevenLabs, and Galtea for real-time phone conversations"
license = { text = "MIT" }
authors = [
    { name = "Galtea AI" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiohttp-retry==2.9.1",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "comm==0.2.3",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "dnspython==2.8.0",
    "elevenlabs==2.15.0",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.0",
    "executing==2.2.1",
    "fastapi==0.116.1",
    "fastapi-cli==0.0.11",
    "fastapi-cloud-cli==0.1.5",
    "frozenlist==1.7.0",
    "galtea==2.9.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "ipykernel==6.30.1",
    "ipython==8.37.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "multidict==6.6.4",
    "nest-asyncio==1.6.0",
    "packaging==25.0",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "platformdirs==4.4.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.3.2",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "rich==14.1.0",
    "rich-toolkit==0.15.1",
    "rignore==0.6.4",
    "sentry-sdk==2.37.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "starlette==0.47.3",
    "termcolor==2.5.0",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "twilio==9.8.0",
    "typer==0.17.4",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "webrtcvad==2.0.10",
    "websockets==15.0.1",
    "yarl==1.20.1",
    "zipp==3.23.0",
]

[project.optional-dependencies]
dev = [
    "notebook",
    "jupyter",
]

[project.urls]
Repository = "https://github.com/Galtea-AI/Calling-Agent"

[tool.uv]
dev-dependencies = [
    "notebook",
    "jupyter",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
